Fix memory panel word wrap

--- a/static/styles/OakSim.css
+++ b/static/styles/OakSim.css
@@ -97,6 +97,7 @@ html, body
 {
 	flex: 1 1 auto;
 	overflow-y: scroll;
+	white-space: nowrap;
 }
 
 /*Scrollbar*/
